new using of gmail api - in working

--- a/package.json
+++ b/package.json
@@ -14,13 +14,18 @@
     "@emailjs/browser": "^4.4.1",
     "dotenv": "^16.4.7",
     "framer-motion": "^12.0.6",
+    "gapi-script": "^1.2.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.5",
     "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@types/gapi": "^0.0.47",
+    "@types/gapi.auth2": "^0.0.61",
+    "@types/gapi.client.gmail": "^1.0.5",
     "@types/node": "^22.13.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
